fix: applied sonarqube suggestions